# player_count_by_bs_version

./: LICENSE  README.md  main.py  pyproject.toml  version.txt
.github/workflows/: main.yml
data/: history.json
