[project]
name = "player-count-by-bs-version"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "demjson3>=3.0.6",
    "japanize-matplotlib>=1.1.3",
    "matplotlib>=3.10.6",
    "packaging>=25.0",
    "requests>=2.32.5",
    "setuptools>=80.9.0",
    "tqdm>=4.67.1",
]
